--- a/css/style.css
+++ b/css/style.css
@@ -1071,7 +1071,7 @@ Responsive media queries
 .transition-obj
 {
  width: 100%;
- /* opacity: 0.8; */
+  opacity: 0.8; 
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
@@ -1082,7 +1082,7 @@ padding: 10px;
 }
 
 .transition-obj:hover {
- /* opacity: 1; */
+  opacity: 1; 
  -webkit-transform: scale(1.05);
  -moz-transform: scale(1.05);
  -ms-transform: scale(1.05);
