--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ HEADER
     /*background-color: rgba(0, 0, 0, 0);*/
     /*background-color: rgba(0, 117, 143, 0.1);*/
     /*background-color: rgba(255, 255, 255, 0.80);*/
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.61);
     min-height: 650px;
 }
 
@@ -1072,11 +1072,11 @@ Responsive media queries
 {
  width: 100%;
   opacity: 0.8; 
- -webkit-transition: all 0.2s ease-in-out;
- -moz-transition: all 0.2s ease-in-out;
- -ms-transition: all 0.2s ease-in-out;
- -o-transition: all 0.2s ease-in-out;
- transition: all 0.2s ease-in-out;
+ -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    transition: all 0.5s linear;
  /*border: 1px solid #d4d4d4;*/
 padding: 10px;
 }
